# jupyterlab-requirements

./: .aicoe-ci.yaml  .eslintrc.js  .gitignore  .mypy.ini  .pre-commit-config.yaml  .prow.yaml  .thoth.yaml  CHANGELOG.md  MANIFEST.in  OWNERS  Pipfile  README.md  README.rst  babel.config.js  horus  install.json  jest.config.js  mypy.ini  package.json  pyproject.toml  requirements.txt  setup.py  tsconfig.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
docs/source/: horus-cli.md  horus-magic-commands.md  jupyterlab-requirements-ui.md
jupyter-config/jupyter_notebook_config.d/: jupyterlab_requirements.json
jupyter-config/jupyter_server_config.d/: jupyterlab_requirements.json
jupyter-config/notebook.d/: jupyterlab_requirements.json
jupyterlab-requirements/: __init__.py  _version.py
jupyterlab_requirements/: __init__.py  cli.py  version.py
jupyterlab_requirements/dependency_management/: __init__.py  api.py  base.py  common.py  config.py  customized_kernel.py  dependencies.py  dependencies_discover_handler.py  dependencies_files.py  dependencies_files_handler.py  dependencies_handler.py  dependencies_stored_handler.py  discover_handler.py  environment.py  install_handler.py  jupyterlab_requirements.yaml  lib.py  (+7 more)
src/: button.tsx  common.ts  constants.ts  dependencyManagementButton.ts  handler.ts  helpers.ts  icons.ts  index.ts  kernel.ts  kernelHandlerMenu.ts  model.ts  notebook.ts  notificationHandler.ts  panel.ts  svg.d.ts  thoth.ts  utils.ts
style/: index.css
tests/: __init__.py  base.py  base_test.py  cli_commands_test.py  thoth.test.ts
(+29 files in other folders)
