[build-system]
requires = ["setuptools>=40.8.0", "wheel", "jupyter_packaging~=0.7.0", "jupyterlab>=3.0.0rc2,==3.*"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ['py36']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''
