[build-system]
requires = ["setuptools>=46.4.0", "wheel", "jupyter_packaging~=0.10,<2", "jupyterlab>=3.1.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''
